# apertium-smn-fin

./: .gitignore  Makefile.am  NOTES  QUESTIONS  README  README.md  apertium-smn-fin.fin-smn.lex  apertium-smn-fin.fin-smn.lrx  apertium-smn-fin.fin-smn.metalrx  apertium-smn-fin.fin-smn.t1x  apertium-smn-fin.fin-smn.t2x  apertium-smn-fin.fin-smn.t3x  apertium-smn-fin.smn-fin.dix  apertium-smn-fin.smn-fin.lrx  apertium-smn-fin.smn-fin.metalrx  apertium-smn-fin.smn-fin.t1x  apertium-smn-fin.smn-fin.t3x  apertium-smn-fin.smn-fin.t4x  check_mt-otpt.py  configure.ac  gt2apertium.cg3r  modes.xml  rm-deriv-cmp.twol  wercheck_mt-otpt.py  wiki-tests.sh
test/: fin-smn-chunker-expected.txt  fin-smn-disam-expected.txt  fin-smn-generator-expected.txt  fin-smn-generator-gold.txt  fin-smn-lex-expected.txt  fin-smn-morph-expected.txt  fin-smn-postchunk-expected.txt  smn-fin-chunker-expected.txt  smn-fin-disam-expected.txt  smn-fin-generator-expected.txt  smn-fin-generator-gold.txt  smn-fin-input.txt  smn-fin-lex-expected.txt  smn-fin-morph-expected.txt  smn-fin-postchunk-expected.txt  smn-fin-syntax-expected.txt  tests.json
texts/: tarina.fin.txt  tarina.smn.txt  vaalit2012.fin.txt  vaalit2012.smn.txt
